# buckyos-devkit

./: .gitignore  .mypy_checker.md  LOCAL_INSTALL.md  PROJECT_CONFIG_EXAMPLE.md  QUICK_START.md  README.md  TESTING_GUIDE.md  TODO_DEVTEST_EXTERNAL_APP_CONFIGS.md  USAGE_EXAMPLE.md  buckyos.example.json  buckyos.example.yaml  install_local.sh  pyproject.toml  reademe.md  test_installation.py
src/: __init__.py  buckyos_kit.py  build.py  build_rust.py  build_web_apps.py  cert_mgr.py  config_builder.py  install.py  make_config.py  perpare_installer.py  prepare_rootfs.py  project.py  sn_test.py
src/remote/: __init__.py  app_list.py  main.py  remote_device.py  vm_mgr.py  worksapce.py
test_project/: README.md  TEST_SUMMARY.md  bucky_project.json  test_build_mock.py  test_load_config.py  test_project_config_discovery.py  test_real_build.py
test_project/test_install/demo_app/www/: app.js  index.html
test_project/web/frontend/: package.json
tests/: test_build_options.py  test_build_rust_musl_toolchain.py  test_cli_help.py  test_remote_app_list.py  test_remote_vm_mgr.py  test_remote_workspace_execution.py  test_remote_workspace_external_app_configs.py
